# ChangeLog for media-gfx/fontmatrix
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jan 2008; Markus Rennings (mren) <mren@mrmx.de>
  -fontmatrix-0.3.0.ebuild, +fontmatrix-0.3.1.ebuild:
  version bump

  14 Jan 2008; Markus Rennings (mren) <mren@mrmx.de> +metadata.xml,
  +fontmatrix-0.3.0.ebuild:
  Initial ebuild for bug 201538
