@@ -1,4 +1,0 @@
-DIST fontmatrix-0.3.1-Source.tar.gz 455920 RMD160 1ad50e23944011ccb345e635758c69c0e6c23104 SHA1 383db51161d9d2545ce3a28545aca0218ab48544 SHA256 2f4e752b2fa6f1e5406277d4a46989b5b2943deda756a88a45a46b5e66a721c8
-EBUILD fontmatrix-0.3.1.ebuild 463 RMD160 a8a159cded991d916b0e0bbe6d467640ff601c54 SHA1 f9fe387d403a65b36b042faf7f53c4b060877b73 SHA256 96ec58c751cebbcd85da8d5b4d25b65a8af7950f9c9c4aeb636bd9d863425730
-MISC ChangeLog 373 RMD160 38e5e04671f0882803421df04cbed0e85d1b6bc5 SHA1 0ea1b78ec7c78e5a7d7e5b06540451b735e28736 SHA256 d6505725261c638f92b9cac7e1c287842696c43f655b4aebf045b50c7a878ce0
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
